force-app/main/default/objects/ProdutosFilial__c/ProdutosFilial__c.object-meta.xml
<CustomObject>
    <label>Produto Filial</label>
    <nameField>
        <displayFormat>PF-{00000}</displayFormat>
        <label>Nome de Produtos Filial</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Produtos Filiais</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>