force-app/main/default/objects/ProdutosFilial__c/fields/CodigoProdutoCodigoFilial__c.field-meta.xml
<CustomField>
    <fullName>CodigoProdutoCodigoFilial__c</fullName>
    <externalId>true</externalId>
    <label>Código Produto + Código FIlial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>