force-app/main/default/objects/ProdutosFilial__c/fields/Filial__c.field-meta.xml
<CustomField>
    <fullName>Filial__c</fullName>
    <label>Filial</label>
    <referenceTo>Filial__c</referenceTo>
    <relationshipLabel>Produtos Filiais</relationshipLabel>
    <relationshipName>Produtos_Filiais</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>